[package]
name = "audioloot"
version = "0.1.0"
authors = ["Kai Giebeler <audioloot@kai.giebeler.de>"]
edition = "2018"
description = "audio loot - Discord music bot"

# [dependencies]
# serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# serde_json = "*"
# songbird = "*"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2"
regex = "1.5.4"
lazy_static = "1.4.0"
json = "0.12.4"
serde_json = "*"

[dependencies.reqwest]
version = "0.11.4"
features = ["cookies"]

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serenity]
version = "0.11.6"
#features = ["client", "voice", "rustls_backend"] # "standard_framework", 
default-features = false
features = [
    "builder",
    "client",
    #"framework",
    "gateway",
    "http",
    "model",
    #"standard_framework",
    "utils",
    "rustls_backend",
    "voice",
    "cache",
]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
